@@ -37,6 +37,7 @@ Changes:
 - Clear notify after execute now of rsync client/local.
 - Increase the number of config backup to 6.
 - Confirm permission on temporary directory.
+- Check DNS if firmware check/required service is enabled.
 - Remove existing cache and notify at boot.
 - Change default AIO size to 4096.
 - Change kern.maxfilesperproc to 50000.
